# ChangeLog for genkernel
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  21 Sep 2009; <tsunam@gentoo.org> gen_initramfs.sh:
  Update to fix broken initramfs caused by multipath config in Gentoo bug #284589

  05 Sep 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Apply patch from Gentoo bug #220913 for tuxonice resume

  14 Aug 2009; Andrew Gaffney <agaffney@gentoo.org> genkernel.conf:
  Enable DISKLABEL=yes by default

  05 Aug 2009; Andrew Gaffney <agaffney@gentoo.org> genkernel:
  This is genkernel 3.4.10.906

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel.conf,
  .gitattributes:
  Adding Id header and Ident for genkernel.conf

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org>
  arch/alpha/config.sh, arch/arm/config.sh, arch/ia64/config.sh,
  arch/mips/config.sh, arch/parisc/config.sh, arch/parisc64/config.sh,
  arch/ppc/config.sh, arch/ppc64/config.sh, arch/sparc/config.sh,
  arch/sparc64/config.sh, arch/um/config.sh, arch/x86/config.sh,
  arch/x86_64/config.sh, defaults/config.sh, gen_arch.sh, gen_bootloader.sh,
  gen_cmdline.sh, gen_compile.sh, gen_configkernel.sh, gen_determineargs.sh,
  gen_funcs.sh, gen_initramfs.sh, gen_moddeps.sh, gen_package.sh:
  Adding Id header.

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel,
  .gitattributes:
  Adding Id header and enabling Ident on *.sh files.

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS, BUGS,
  HACKING, README, TODO:
  Adding Id header.

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> .gitattributes:
  Adding additional files to .gitattributes to enable Ident.

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> +.gitattributes:
  Adding .gitattributes file.

  19 Jul 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts:
  Change command used to determine real filename for REAL_RESUME for Gentoo
  bug #269603